# rhr

./: .env.example  .env.staging.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  conftest.py  pyproject.toml
backend/apps/contracts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/contracts/migrations/: 0001_initial.py  0002_initial.py  0002_remove_contracttype_unique_contract_type_code_per_tenant_and_more.py
backend/apps/contracts/tests/: __init__.py  test_models.py  test_views.py
backend/apps/core/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py  0002_initial.py
backend/apps/core/tests/: test_permissions.py  test_views.py
backend/apps/employees/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/employees/migrations/: 0001_initial.py  0002_remove_department_unique_department_code_per_tenant_and_more.py  0003_add_location_fields.py  0004_move_country_to_department.py
backend/apps/employees/tests/: __init__.py  test_models.py  test_views.py
backend/apps/leave/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/leave/migrations/: 0001_initial.py  0002_remove_leavebalance_unique_leave_balance_per_employee_type_year_and_more.py  0003_add_location_fields.py  0004_holiday_external_id_holiday_holiday_types_and_more.py
backend/apps/leave/tests/: __init__.py  test_models.py  test_views.py
backend/apps/tenants/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/tenants/migrations/: 0001_initial.py  0002_add_logo_icon.py  0002_initial.py
backend/apps/tenants/tests/: __init__.py  test_middleware.py  test_models.py  test_views.py
backend/apps/timesheets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/timesheets/migrations/: 0001_initial.py  (+1 more)
backend/apps/timesheets/tests/: __init__.py  (+2 more)
backend/apps/timetracking/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  urls_users.py  views.py
backend/config/: __init__.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/tests/: factories.py
backend/tests/benchmarks/: __init__.py  test_api_performance.py
backend/tests/integration/: test_seed_staging_data.py  test_tenant_isolation.py
(+161 files in other folders)
